# iot-sdk-c

./: CMakeLists.txt  Makefile  README.md  make.settings
platform/os/linux/: HAL_Flash_linux.c
samples/: CMakeLists.txt  samples.mk
samples/dynamic_auth/: dynamic_auth_sample.c
samples/mqtt/: mqtt_sample.c
samples/ota/: ota_sample.c
src/certs/: ca.c  ca.h
src/mqtt/include/: mqtt_client.h
src/mqtt/src/: mqtt_client.c  mqtt_client_common.c  mqtt_client_publish.c
src/ota/include/: ota_config.h  ota_internal.h
src/ota/src/: ota_client.c  ota_fetch.c  ota_lib.c
src/sdk-impl/: uiot_export.h  uiot_export_mqtt.h  uiot_export_ota.h
src/utils/: utils_httpc.c  utils_httpc.h
tests/unit_test/: CMakeLists.txt  unit_test.mk
tests/unit_test/src/: unit_dynamic_auth_test.cpp  unit_mqtt_test.cpp
tools/scripts/: default_settings.mk  parse_make_settings.mk  rules-final.mk
